tests/should_fail/match_string_two_literals_non_exhaust.nv
module fail
// Non-exhaustive: single string literal, no wildcard
let s = "hello"
let r = match s {
    "hello" => 1,
    "world" => 2,
}
